# SWE-ReX

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  codecov.yml  local.py  mkdocs.yml  models.py  pyproject.toml  release_tmp.sh  remote.py  runtime.py
.github/: mlc_config.json
.github/workflows/: build-docs.yaml  check-links.yaml  pytest.yaml
docs/: CNAME  architecture.md  deployments.md  examples.py  index.md  installation.md  quickstart.md  runtimes.md  usage.md
docs/api/: server.md
docs/api/deployments/: abstract.md  config.md  docker.md  dummy.md  fargate.md  local.md  modal.md  remote.md
docs/api/runtimes/: abstract.md  data.md  dummy.md  local.md  remote.md
docs/css/: custom.css
docs/overrides/: main.html
examples/: examples.py
src/swebridge/: local.py  models.py  remote.py  runtime.py
src/swerex/: __init__.py  __main__.py  exceptions.py  local.py  models.py  remote.py  runtime.py  server.py
src/swerex/deployment/: __init__.py  abstract.py  bwrap.py  config.py  docker.py  dummy.py  fargate.py  local.py  modal.py  remote.py
src/swerex/deployment/hooks/: abstract.py  status.py
src/swerex/runtime/: abstract.py  bwrap.py  config.py  dummy.py  local.py  remote.py
src/swerex/utils/: aws.py  aws_teardown.py  free_port.py  log.py  wait.py
tests/: conftest.py  contest.py  setup_test_docker.sh  swe_rex_test.Dockerfile  test_docker_deployment.py  test_dress_rehearsal.py  test_dummy_deployment.py  test_execution.py  test_fargate_deployment.py  test_get_deployment.py  test_local_deployment.py  test_local_runtime.py  test_modal_deployment.py  test_remote_deployment.py  test_runtime.py  test_server.py
